generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}
generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./prisma/dbml"
}


model User {
  id        Int       @id @default(autoincrement())
  username  String    @unique
  password  String
  firstName String?
  lastName  String?
  faculty   String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  Post      Post[]
  Comment   Comment[]
}

model Post {
  id          Int       @id @default(autoincrement())
  title       String
  content     String
  createdAt   DateTime  @default(now())
  authorId    Int
  updatedAt   DateTime  @updatedAt
  category    String    @default("general") // เพิ่ม category

  author  User      @relation(fields: [authorId], references: [id])
  Comment Comment[]
}

model Comment {
  id        Int      @id @default(autoincrement())
  postId    Int
  userId    Int
  content   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  post      Post     @relation(fields: [postId], references: [id])
  user      User     @relation(fields: [userId], references: [id])
}

