//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  username String [unique, not null]
  password String [not null]
  firstName String
  lastName String
  faculty String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Post Post [not null]
  Comment Comment [not null]
}

Table Post {
  id Int [pk, increment]
  title String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  authorId Int [not null]
  updatedAt DateTime [not null]
  category String [not null, default: 'general']
  author User [not null]
  Comment Comment [not null]
}

Table Comment {
  id Int [pk, increment]
  postId Int [not null]
  userId Int [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  post Post [not null]
  user User [not null]
}

Ref: Post.authorId > User.id

Ref: Comment.postId > Post.id

Ref: Comment.userId > User.id